--- a/src/components/Button/Button.module.css
+++ b/src/components/Button/Button.module.css
@@ -1,7 +1,8 @@
-.button {
+.Button {
   padding: 8px 16px;
+  margin: 0 auto;
   border-radius: 2px;
-  background-color: rgba(48, 21, 77, 0.2);
+  background-color: #3f51b5;
   transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1);
   text-align: center;
   display: inline-block;
@@ -17,14 +18,10 @@
   min-width: 180px;
   box-shadow: 0px 3px 1px -2px rgba(0, 0, 0, 0.2),
     0px 2px 2px 0px rgba(0, 0, 0, 0.14), 0px 1px 5px 0px rgba(0, 0, 0, 0.12);
+  width: 60px;
 }
 
-.button_center {
-  text-align: center;
-  margin-top: 10px;
-}
-
-.button:hover,
-.button:focus {
-  background-color: #505050;
+.Button:hover,
+.Button:focus {
+  background-color: #303f9f;
 }
