--- a/src/components/Searchbar/Searchbar.module.css
+++ b/src/components/Searchbar/Searchbar.module.css
@@ -1,4 +1,4 @@
-.searchbar {
+.Searchbar {
   top: 0;
   left: 0;
   position: sticky;
@@ -12,12 +12,13 @@
   padding-top: 12px;
   padding-bottom: 12px;
   color: #fff;
-  background-color: rgba(48, 21, 77, 0.2);
+  background: linear-gradient(to top, #7e9db3, #0057b8);
   box-shadow: 0px 2px 4px -1px rgba(0, 0, 0, 0.2),
     0px 4px 5px 0px rgba(0, 0, 0, 0.14), 0px 1px 10px 0px rgba(0, 0, 0, 0.12);
 }
 
-.searchForm {
+
+.form {
   display: flex;
   align-items: center;
   width: 100%;
@@ -27,7 +28,37 @@
   overflow: hidden;
 }
 
-.searchForm_input {
+.button {
+  display: inline-block;
+  width: 48px;
+  height: 48px;
+  border: 0;
+  background-size: 40%;
+  background-repeat: no-repeat;
+  background-position: center;
+  opacity: 0.6;
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  cursor: pointer;
+  outline: none;
+}
+
+.button:hover {
+  opacity: 1;
+}
+
+.label {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  padding: 0;
+  overflow: hidden;
+  clip: rect(0, 0, 0, 0);
+  white-space: nowrap;
+  clip-path: inset(50%);
+  border: 0;
+}
+
+.input {
   display: inline-block;
   width: 100%;
   font: inherit;
@@ -38,22 +69,7 @@
   padding-right: 4px;
 }
 
-.searchForm_input::placeholder {
+.input::placeholder {
   font: inherit;
   font-size: 18px;
-}
-
-.searchForm_button {
-  display: inline-block;
-  width: 100px;
-  height: 48px;
-  border: 0;
-  opacity: 0.6;
-  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  cursor: pointer;
-  outline: none;
-}
-
-.searchForm_button:hover {
-  opacity: 1;
 }
