--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,4 @@
+
 html {
   box-sizing: border-box;
   width: 100vw;
@@ -15,7 +16,7 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
     Oxygen-Sans, Ubuntu, Cantarell, 'Helvetica Neue', sans-serif;
   color: #212121;
-  background-color: #3b3b3b;
+  background-color: #323232;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
