--- a/src/components/Searchbar/Searchbar.module.css
+++ b/src/components/Searchbar/Searchbar.module.css
@@ -12,11 +12,10 @@
   padding-top: 12px;
   padding-bottom: 12px;
   color: #fff;
-  background: linear-gradient(to top, #7b99ae, #0057b8);
+  background: linear-gradient(to top, #414e9a, #7a8198);
   box-shadow: 0px 2px 4px -1px rgba(0, 0, 0, 0.2),
-    0px 4px 5px 0px rgba(0, 0, 0, 0.14), 0px 1px 10px 0px rgba(0, 0, 0, 0.12);
+  0px 4px 5px 0px rgba(0, 0, 0, 0.14), 0px 1px 10px 0px rgba(0, 0, 0, 0.12);
 }
-
 
 .form {
   display: flex;
